--- a/assets/style.css
+++ b/assets/style.css
@@ -120,14 +120,14 @@ input-continer {
 
 
 
-content-main-2{
-  
+content-main-2 {
+
     width: 100%;
-    
-    
+
+
 }
 
-banner-container{
+banner-container {
     display: flex;
     min-height: 144px;
     position: relative;
@@ -137,11 +137,11 @@ banner-container{
     justify-content: center;
     align-items: center;
     margin: 0 74px;
-    background: radial-gradient( 51.39% 511.66% at 47.68% -217.91%, #ff9900 0%, #e50914 17.27%, #0e1b4f 79.44%, #000413 100% );
+    background: radial-gradient(51.39% 511.66% at 47.68% -217.91%, #ff9900 0%, #e50914 17.27%, #0e1b4f 79.44%, #000413 100%);
     box-shadow: 0px -8px 25px rgba(0, 0, 0, 0.5);
 }
 
-.btn-link{
+.btn-link {
     cursor: pointer;
     color: #448ef4;
     display: flex;
@@ -159,7 +159,33 @@ banner-container{
     padding: 0;
 }
 
-banner-element-2{
+banner-element-2 {
     margin-left: 32px;
+}
+
+.video-container {
+    z-index: -1;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    max-width: 73%;
+    max-height: 54%;
+    position: absolute;
+    top: 46%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+video {
+    display: inline-block;
+    vertical-align: baseline;
+}
+
+content-main-3{
+    display: flex;
+    justify-content: center;
 }
 
