--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,20 @@ body {
     font-family: Netflix;
     color: white;
     overflow-x: hidden;
+}
 
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(229, 9, 20);
+    border-radius: 10px;
 }
 
 main {
@@ -184,8 +197,7 @@ video {
     vertical-align: baseline;
 }
 
-content-main-3{
+content-main-3 {
     display: flex;
     justify-content: center;
 }
-
