--- a/assets/style.css
+++ b/assets/style.css
@@ -36,6 +36,10 @@ main {
 
 }
 
+html{
+    height: 100%;
+}
+
 header {
     width: 100%;
     position: absolute;
@@ -347,7 +351,7 @@ content-main-6 {
 }
 
 footer {
-    
+
     border-top: 8px solid #454545;
     padding-left: 2rem;
     padding-right: 2rem;
@@ -393,26 +397,28 @@ footer {
     flex: 0 0 calc(25% - 0.75rem);
 }
 
-.footer-list > li > a {
-    color: rgba(255,255,255,0.7);
+.footer-list>li>a {
+    color: rgba(255, 255, 255, 0.7);
     border-radius: 0.125rem;
 }
+
 @font-face {
     font-family: NetflixLight;
     src: url(/fonts/NetflixSansLight.ttf);
 }
-.netflix-light{
+
+.netflix-light {
     font-family: NetflixLight;
     font-size: 14px;
     font-weight: 100;
 }
 
-.footer-2{
-    background: rgba(0,0,0,.75);
+.footer-2 {
+    background: rgba(0, 0, 0, .75);
     margin-top: 0;
 }
 
-content-login-form{
+content-login-form {
     position: absolute;
     top: 0;
     left: 0;
@@ -423,25 +429,25 @@ content-login-form{
     padding: 0 5%;
 }
 
-login{
+login {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     height: 100%;
     background-color: transparent;
     color: #fff;
 }
 
-login-wraper{
+login-wraper {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     margin: 0;
     min-height: 100%;
     padding: 0;
@@ -449,42 +455,52 @@ login-wraper{
     z-index: 0;
     background-color: #000;
     color: #fff;
-    
+
 }
 
-login-background{
+login-background {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
     color: #fff;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     opacity: .5;
     background-size: cover;
     display: block;
-    height: 100%;
-    min-height: 100vh;
-    overflow: hidden;
+    height: 100vh;
     position: absolute;
+    background-image: url(/img/main.jpg);
     width: 100%;
     z-index: -1;
-}
-
-.login-image{
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
     color: #fff;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     border: 0;
     min-height: 100%;
     min-width: 100%;
 }
-login-header{
-    background: linear-gradient(180deg,rgba(0,0,0,.5) 0,transparent);
+
+.login-image {
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    direction: ltr;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    font-size: 16px;
+    color: #fff;
+    letter-spacing: 0 !important;
+    border: 0;
+    min-height: 100%;
+    min-width: 100%;
+}
+
+login-header {
+    background: linear-gradient(180deg, rgba(0, 0, 0, .5) 0, transparent);
     border-bottom: transparent;
     left: 0;
     position: absolute;
@@ -494,27 +510,73 @@ login-header{
 
 
 
-.body-margin{
+.body-margin {
     display: block;
+    top: 0;
+    width: 450px;
     height: 91px;
 }
 
-.login-content{
+login-body {
+    background: transparent;
+}
+
+.login-form {
+    background-color: rgba(0, 0, 0, .75);
+}
+
+.login-content {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     color: #333;
-    padding: 0 5%;
-    background-color: transparent;
-    margin: 0 auto -236px;
+   
+    background: rgba(0, 0, 0, .75);
+    margin: 0 auto 90px;
     max-width: 450px;
-    min-height: 100vh;
+
+    min-height: 660px;
+
+
+
+    border-radius: 4px;
+
 }
 
-login-footer{
+.login-form-main{
+    color: #fff;
+    padding: 60px 68px 40px;
+   
+}
+
+.login-form-main-title{
+    margin: 0;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 28px;
+}
+
+.login-control-container{
+    padding-bottom: 16px;
+    max-width: 100%;
+}
+
+.login-control{
+    background: #333;
+    border: 0;
+    border-radius: 4px;
+    font-family: Netflix;
+    font-size: 16px;
+    color: #8c8c8c;
+    width: -webkit-fill-available;
+    height: 34px;
+    line-height: 34px;
+    padding: 4px 16px;
+}
+login-footer {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
@@ -529,3 +591,135 @@ login-footer{
     background: rgba(0,0,0,.75);
     margin-top: 0;
 }
+
+site-footer{
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    direction: ltr;
+    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-size: 1em;
+    letter-spacing: 0!important;
+    width: 90%;
+    padding: 30px 0;
+    margin: 0 auto;
+    max-width: 1000px;
+    color: #737373;
+}
+
+
+.footer-top{
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    direction: ltr;
+    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-size: 1em;
+    letter-spacing: 0!important;
+    margin: 0 0 30px;
+    padding: 0;
+    color: #737373;
+}
+
+.footer-top-a{
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    direction: ltr;
+    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-size: 1em;
+    letter-spacing: 0!important;
+    text-decoration: none;
+    background-color: transparent;
+    color: #737373;
+}
+.btn-login{
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 16px;
+    margin: 24px 0 12px;
+}
+
+.login-checkbox{
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    direction: ltr;
+    user-select: none;
+    letter-spacing: 0!important;
+    color: inherit;
+    font: inherit;
+    margin: 0;
+    line-height: normal;
+    box-sizing: border-box;
+    padding: 0;
+    margin-right: 10px;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+}
+.login-checkbox-label{
+    color: #b3b3b3;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+
+
+
+
+
+
+
+
+.custom-checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+  }
+.custom-checkbox+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+  }
+  .custom-checkbox+label::before {
+    content: '';
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #adb5bd;
+    border-radius: 0.25em;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+  }
+
+  .custom-checkbox:checked+label::before {
+    border-color: #737373;
+    background-color: #737373;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+  }
+
+  /* стили при наведении курсора на checkbox */
+.custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
+    border-color: #737373;
+    background-color: #737373c1;
+  }
+  /* стили для активного состояния чекбокса (при нажатии на него) */
+  .custom-checkbox:not(:disabled):active+label::before {
+    background-color: #737373;
+    border-color: #737373;
+  }
+  /* стили для чекбокса, находящегося в фокусе */
+  .custom-checkbox:focus+label::before {
+    box-shadow: 0 0 0 0.2rem rgba(114, 116, 115, 0.468);
+  }
+  /* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
+  .custom-checkbox:focus:not(:checked)+label::before {
+    border-color: #80bdff;
+  }
+  /* стили для чекбокса, находящегося в состоянии disabled */
+  .custom-checkbox:disabled+label::before {
+    background-color: #e9ecef;
+  }
