--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ main {
 
 }
 
-html{
+html {
     height: 100%;
 }
 
@@ -402,6 +402,56 @@ footer {
     border-radius: 0.125rem;
 }
 
+.footer-list-login {
+    padding: 4.5rem 0;
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    width: inherit;
+    height: inherit;
+    margin-top: -1rem;
+    margin-left: -0.75rem;
+    width: calc(100% + 0.75rem);
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    padding: 0px;
+}
+
+.footer-list-login>li {
+    -webkit-text-size-adjust: 100%;
+    font-family: Netflix, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 0.875rem;
+    font-weight: 400;
+    letter-spacing: 0 !important;
+    box-sizing: border-box;
+    margin-top: 1rem;
+    margin-left: 0.75rem;
+    display: inline-flex;
+    flex-wrap: wrap;
+    width: inherit;
+    padding: 0px;
+    flex: 0 0 calc(25% - 0.75rem);
+}
+
+.footer-list-login>li>a {
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    direction: ltr;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    font-size: 1em;
+    letter-spacing: 0 !important;
+    text-decoration: none;
+    background-color: transparent;
+    color: #737373;
+}
+
 @font-face {
     font-family: NetflixLight;
     src: url(/fonts/NetflixSansLight.ttf);
@@ -451,39 +501,33 @@ login-wraper {
     margin: 0;
     min-height: 100%;
     padding: 0;
-    position: relative;
+    /*position: relative;*/
     z-index: 0;
     background-color: #000;
     color: #fff;
 
+
 }
 
 login-background {
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-smoothing: antialiased;
-    direction: ltr;
-    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    font-size: 16px;
-    color: #fff;
-    letter-spacing: 0 !important;
     opacity: .5;
-    background-size: cover;
     display: block;
-    height: 100vh;
+   
     position: absolute;
-    background-image: url(/img/main.jpg);
-    width: 100%;
     z-index: -1;
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-smoothing: antialiased;
-    direction: ltr;
-    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    font-size: 16px;
-    color: #fff;
     letter-spacing: 0 !important;
     border: 0;
     min-height: 100%;
     min-width: 100%;
+    background-image: url(/img/main.jpg);
+    background-size: cover;
+    /* Растягиваем картинку, чтобы она полностью покрывала блок */
+    background-repeat: no-repeat;
+    /* Запрещаем повторение картинки */
+    background-position: center center;
+    /* Выравниваем картинку по центру блока */
+    background-attachment: fixed;
+    /* Зафиксировать фоновое изображение */
 }
 
 .login-image {
@@ -533,12 +577,12 @@ login-body {
     font-size: 16px;
     letter-spacing: 0 !important;
     color: #333;
-   
+
     background: rgba(0, 0, 0, .75);
     margin: 0 auto 90px;
     max-width: 450px;
 
-    min-height: 660px;
+    min-height: 550px;
 
 
 
@@ -546,25 +590,25 @@ login-body {
 
 }
 
-.login-form-main{
+.login-form-main {
     color: #fff;
     padding: 60px 68px 40px;
-   
+
 }
 
-.login-form-main-title{
+.login-form-main-title {
     margin: 0;
     font-size: 32px;
     font-weight: 500;
     margin-bottom: 28px;
 }
 
-.login-control-container{
+.login-control-container {
     padding-bottom: 16px;
     max-width: 100%;
 }
 
-.login-control{
+.login-control {
     background: #333;
     border: 0;
     border-radius: 4px;
@@ -576,29 +620,32 @@ login-body {
     line-height: 34px;
     padding: 4px 16px;
 }
+
 login-footer {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
-    letter-spacing: 0!important;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    letter-spacing: 0 !important;
     color: #757575;
     font-size: 1em;
     min-width: 190px;
     padding-bottom: 20px;
-    position: relative;
+    position: absolute;
+
+    bottom: 0;
     width: 100%;
-    background: rgba(0,0,0,.75);
+    background: rgba(0, 0, 0, .75);
     margin-top: 0;
 }
 
-site-footer{
+site-footer {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 1em;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     width: 90%;
     padding: 30px 0;
     margin: 0 auto;
@@ -607,30 +654,32 @@ site-footer{
 }
 
 
-.footer-top{
+.footer-top {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 1em;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     margin: 0 0 30px;
     padding: 0;
     color: #737373;
 }
 
-.footer-top-a{
+.footer-top-a {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-weight: 500;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 1em;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     text-decoration: none;
     background-color: transparent;
     color: #737373;
 }
-.btn-login{
+
+.btn-login {
     border-radius: 4px;
     font-size: 16px;
     font-weight: 500;
@@ -638,12 +687,12 @@ site-footer{
     margin: 24px 0 12px;
 }
 
-.login-checkbox{
+.login-checkbox {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     direction: ltr;
     user-select: none;
-    letter-spacing: 0!important;
+    letter-spacing: 0 !important;
     color: inherit;
     font: inherit;
     margin: 0;
@@ -656,7 +705,8 @@ site-footer{
     position: absolute;
     top: 0;
 }
-.login-checkbox-label{
+
+.login-checkbox-label {
     color: #b3b3b3;
     font-size: 13px;
     font-weight: 400;
@@ -674,13 +724,15 @@ site-footer{
     position: absolute;
     z-index: -1;
     opacity: 0;
-  }
+}
+
 .custom-checkbox+label {
     display: inline-flex;
     align-items: center;
     user-select: none;
-  }
-  .custom-checkbox+label::before {
+}
+
+.custom-checkbox+label::before {
     content: '';
     width: 16px;
     height: 16px;
@@ -693,33 +745,37 @@ site-footer{
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 50% 50%;
-  }
+}
 
-  .custom-checkbox:checked+label::before {
+.custom-checkbox:checked+label::before {
     border-color: #737373;
     background-color: #737373;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-  }
+}
 
-  /* стили при наведении курсора на checkbox */
+/* стили при наведении курсора на checkbox */
 .custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
     border-color: #737373;
     background-color: #737373c1;
-  }
-  /* стили для активного состояния чекбокса (при нажатии на него) */
-  .custom-checkbox:not(:disabled):active+label::before {
+}
+
+/* стили для активного состояния чекбокса (при нажатии на него) */
+.custom-checkbox:not(:disabled):active+label::before {
     background-color: #737373;
     border-color: #737373;
-  }
-  /* стили для чекбокса, находящегося в фокусе */
-  .custom-checkbox:focus+label::before {
+}
+
+/* стили для чекбокса, находящегося в фокусе */
+.custom-checkbox:focus+label::before {
     box-shadow: 0 0 0 0.2rem rgba(114, 116, 115, 0.468);
-  }
-  /* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
-  .custom-checkbox:focus:not(:checked)+label::before {
+}
+
+/* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
+.custom-checkbox:focus:not(:checked)+label::before {
     border-color: #80bdff;
-  }
-  /* стили для чекбокса, находящегося в состоянии disabled */
-  .custom-checkbox:disabled+label::before {
+}
+
+/* стили для чекбокса, находящегося в состоянии disabled */
+.custom-checkbox:disabled+label::before {
     background-color: #e9ecef;
-  }
+}
