--- a/assets/register.css
+++ b/assets/register.css
@@ -11,7 +11,7 @@ body {
     font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
 }
 
-content-main-1-form {
+content-main-1-form-reg {
     color:#333333;
     font-size: 16px;
     max-width:30vw;
