--- a/assets/register.css
+++ b/assets/register.css
@@ -6,28 +6,63 @@
     src: url(/fonts/NetflixSansRegular.ttf);
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
+main {
+    height: 100vh;
+    justify-content: space-between;
+}
+
 body {
     background: #fff;
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
 }
 
 content-main-1-form-reg {
-    color:#333333;
+    color: #333333;
     font-size: 16px;
-    max-width:30vw;
-    margin-left: calc((-30vw + 100%)/2);
-    letter-spacing: 0!important;
+    max-width: 340px;
+    margin-left: calc((-400px + 100%)/2);
+    margin-bottom: 30px;
+    letter-spacing: 0 !important;
     padding: 20px 32px 60px;
 }
 
-content-fragment h1 {
+content-fragment>h1 {
     margin-top: 0;
+    text-align: center;
+}
+
+.context-body {
+    text-align: center;
+}
+
+.reg-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.step-logo-container {
+    display: inline-block;
+}
+
+.step-logo {
+    margin: 100px 0 20px;
+    width: 260px;
+    display: block;
+    background: url(/img/devices.png) no-repeat 50% 50%;
+    background-size: 260px;
+    height: 90px;
+
 }
 
 .step-indicator {
     font-size: 13px;
-    text-align: inherit;
     display: block;
+    text-align: center;
 }
 
 .form-list {
@@ -64,7 +99,7 @@ input-continer {
     color: #000;
     font-family: Netflix Sans;
     font: inherit;
-    
+
     width: 100%;
     min-width: 12.5rem;
     font-size: 16px;
@@ -98,11 +133,70 @@ input-continer {
     color: #fff;
     border: none;
 
-    box-shadow: 0 1px 1px rgba(0,0,0,.25);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .25);
     box-sizing: border-box;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     user-select: none;
     vertical-align: middle;
+}
+
+.footer-wrapper {
+    color: #737373;
+    font-size: 1em;
+    width: 100%;
+    margin-top: 50px;
+    padding-bottom: 20px;
+    min-width: 190px;
+    background-color: #f3f3f3;
+    height: 194px;
+}
+
+.footer-divider {
+    border-top: 1px solid #e6e6e6;
+    height: 0;
+    width: 100%;
+}
+
+.footer-top {
+    margin: 0 0 30px;
+}
+
+.footer-top :hover {
+    text-decoration: underline;
+}
+
+footer {
+    margin: 0;
+    height: 100%;
+    font-family: NetflixLight;
+    background-color: #f3f3f3;
+    border-top: none;
+    color: #737373;
+    text-decoration: none;
+}
+
+.footer-list>li {
+    font-family: NetflixLight;
+    font-size: 14px;
+    font-weight: 100;
+    color: #737373;
+    text-decoration: none;
+}
+
+.footer-list>li>a {
+    color: #737373;
+    text-decoration: none;
+}
+
+.footer-list>li>a :hover {
+    text-decoration: underline;
+}
+
+.container {
+    padding-top: 30px;
+    font-size: 1em;
+    padding-bottom: 20px;
+    width: 100%;
 }
