finish create password

--- a/assets/create_password.css
+++ b/assets/create_password.css
@@ -16,6 +16,38 @@ content-fragment>h1 {
     text-align: left;
 }
 
+.form-list {
+    margin-bottom: 10px;
+}
+
+input-continer {
+   height: 50px;
+   margin-top: 0;
+}
+
+.form-input {
+    border: 1px solid rgb(128, 128, 128)sparent;
+    border-radius: 4px;
+}
+
+.email-preference-container {
+    flex-wrap: wrap;
+    line-height: 1.125rem;
+    display: flex;
+    align-items: center;
+}
+
+#e83093c53429a {
+    width: 1.125rem;
+    height: 1.125rem;
+    cursor: pointer;
+    margin-right: 15px;
+}
+
+/* #e83093c53429a :hover {
+    box-shadow: 0 6px 1px rgba(0, 0, 0, .25);
+
+} */
 /* content-fragment h1 {
     margin-top: 0;
 }
