--- a/components/Header/Header.hbs
+++ b/components/Header/Header.hbs
@@ -1,7 +1,8 @@
 <header-reg>
-    <div class="header-content header-content-reg">
+    <div class="header-content {{#each classes}} {{this}} {{/each}}">
         <div class="row">
-            
+
         </div>
     </div>
 </header-reg>
+
