--- a/src/pages/login/components/body/body.hbs
+++ b/src/pages/login/components/body/body.hbs
@@ -3,7 +3,7 @@
 <div class="login-content">
     <div class="login-form-main">
         <h1 class="login-form-main-title">Авторизация</h1>
-        <a href="#" onclick="window.link()">test</a>
+        <a href="/feed" data-link>test</a>
         <form name="loginForm" action="post">
             <div class="login-control-container">
                 <input
