done but without css

--- a/components/RegisterContextBody/RegisterContextBody.hbs
+++ b/components/RegisterContextBody/RegisterContextBody.hbs
@@ -1,5 +1,5 @@
 <content-fragment>
-    <div class="context-body">
+    <div class="{{#each classes}} {{this}} {{/each}}">
         {{text}}
     </div>
 </content-fragment>
