--- a/components/FinishAccContent/FinishAccContent.css
+++ b/components/FinishAccContent/FinishAccContent.css
@@ -2,6 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+    color: #333333;
+    font-size: 16px;
+    max-width: 340px;
+    margin-left: calc((-400px + 100%)/2);
+    margin-bottom: 30px;
+    padding: 20px 32px 60px;
 }
 
 .step-logo-container {
