--- a/components/CreatePasswordContent/CreatePasswordContent.hbs
+++ b/components/CreatePasswordContent/CreatePasswordContent.hbs
@@ -1,5 +1,5 @@
-<content-main-1-form-reg>
+<div class="content-create-password">
     <form method="POST">
 
     </form>
-</content-main-1-form-reg>
+</div>
