--- a/components/FormList/FormList.hbs
+++ b/components/FormList/FormList.hbs
@@ -1,20 +1,5 @@
 <content-fragment>
-    <ul class="form-list">
-        <!-- <li>
-                                <span>Email</span>
-                                <span>ax.chinaev@yandex.ru</span>
-                            </li> -->
-{{!-- 
+    <ul class="form-list {{#each classes}} {{this}} {{/each}}">
 
-        <li>
-            <input-continer>
-                <input class="form-input" placeholder="Введите почту" type="email" name id>
-            </input-continer>
-        </li>
-        <li>
-            <input-continer class="mt-2">
-                <input class="form-input" placeholder="Введите пароль" type="password" name id>
-            </input-continer>
-        </li> --}}
     </ul>
 </content-fragment>
