--- a/index.css
+++ b/index.css
@@ -11,7 +11,14 @@
 @import url(components/RegisterContextBody/RegisterContextBody.css);
 @import url(components/FinishAccContent/FinishAccContent.css);
 
-@import url(components/RegFooter/RegFooter.css);
-
 @import url(css/form-input.css);
+@import url(css/form-list.css);
 @import url(components/FormInput/FormInput.css);
+@import url(components/FormList/FormList.css);
+@import url(components/CreatePasswordContent/CreatePasswordContent.css);
+@import url(components/EmailPreferenceContainer/EmailPreferenceContainer.css);
+
+@import url(components/AlreadyCreatedPasswordContent/AlreadyCreatedPasswordContent.css);
+@import url(components/LinkForgotPassword/LinkForgotPassword.css);
+
+@import url(components/RegFooter/RegFooter.css);
