--- a/components/AlreadyCreatedPasswordContent/AlreadyCreatedPasswordContent.hbs
+++ b/components/AlreadyCreatedPasswordContent/AlreadyCreatedPasswordContent.hbs
@@ -1,5 +1,5 @@
-<content-main-1-form-reg>
+<div class="already-created-content">
     <form method="POST">
     
     </form>
-</content-main-1-form-reg>
+</div>
