--- a/components/FormInput/FormInput.css
+++ b/components/FormInput/FormInput.css
@@ -1,19 +1,20 @@
 .input-container-already-created {
-    height: 60px;
+    margin-top: 16px;
 }
 
 .form-input-already-created {
-    border: 1px solid #8c8c8c;
     border-radius: 0;
 }
 
 
 .input-container-create-password {
-    height: 50px;
-    margin-top: 0;
- }
- 
- .form-input-create-password {
-     border: 1px solid rgb(128, 128, 128)sparent;
-     border-radius: 4px;
- }
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 60px;
+    margin-top: 0.5rem
+}
+
+.form-input-create-password {
+    border-radius: 4px;
+}
