--- a/components/RegFooter/RegFooter.hbs
+++ b/components/RegFooter/RegFooter.hbs
@@ -1,6 +1,6 @@
 <div class="footer-wrapper">
     <div class="footer-divider"></div>
-    <footer>
+    <div class="footer">
         <div class="container">
             <div class="header-divider"></div>
             <p class=footer-top>
@@ -46,5 +46,5 @@
                 </li>
             </ul>
         </div>
-    </footer>
+    </div>
 </div>
