--- a/css/form-input.css
+++ b/css/form-input.css
@@ -8,11 +8,10 @@
 .form-input {
     background: #FFFFFF;
     line-height: normal;
+    border: 1px solid #8c8c8c;
     padding: 0.5rem 0.5rem 0.5rem;
     color: #000;
-    font-family: Netflix Sans;
     font: inherit;
-
     width: 100%;
     min-width: 12.5rem;
     font-size: 16px;
