--- a/src/pages/feed/components/header/header-feed.hbs
+++ b/src/pages/feed/components/header/header-feed.hbs
@@ -1,24 +1,27 @@
  <div class="header-content">
     <div class="row">
         <div class="col justify-content-start">
-            <img src="src/static/img/logo.svg" alt="logo">
+            <div class="row">
+                <div class="col-3">
+                    <img src="src/static/img/logo.svg" alt="logo">
+                </div>
+                <div
+                    class="ml-3 col d-flex align-items-center feed-header-menu margin-a">
+                    <a href="/">Начало</a>
+                    <a href="/serials">Сериалы</a>
+                    <a href="/films">Фильмы</a>
+                    <a href="/list">Избранное</a>
+                </div>
+            </div>
 
         </div>
-        <div class="col ml-2 feed-header-menu">
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-        </div>
-        <div class="col ml-2">
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
-            <a href="#begin">Начало</a>
+        <div
+            class="col d-flex align-items-center feed-header-menu margin-a justify-content-end">
+
+            <a href="#begin">Поиск</a>
+            <a href="#begin">Пользователь</a>
+
         </div>
     </div>
 </div>
+
