--- a/src/pages/feed/feed.css
+++ b/src/pages/feed/feed.css
@@ -1,1 +1,3 @@
 @import url(components/header/header.css);
+@import url(components/content/feed-content-main.css);
+@import url(components/content/genre/genre.css);
