--- a/src/pages/login/components/body/body.hbs
+++ b/src/pages/login/components/body/body.hbs
@@ -3,13 +3,13 @@
 <div class="login-content">
     <div class="login-form-main">
         <h1 class="login-form-main-title">Авторизация</h1>
-        <a href="/feed" data-link>test</a>
+       
         <form name="loginForm" action="post">
             <div class="login-control-container">
                 <input
-                    type="email"
+                    type="text"
                     name="email"
-                    placeholder="Введите email"
+                    placeholder="Введите логин или почту"
                     class="login-control">
             </div>
             <div class="login-control-container">
