fix reg auth goToLink and more ...

--- a/src/pages/feed/components/header/header-feed.hbs
+++ b/src/pages/feed/components/header/header-feed.hbs
@@ -7,7 +7,7 @@
                 </div>
                 <div
                     class="ml-3 col d-flex align-items-center feed-header-menu margin-a">
-                    <a href="/">Начало</a>
+                    <a href="/" data-link>Начало</a>
                     <a href="/serials">Сериалы</a>
                     <a href="/films">Фильмы</a>
                     <a href="/list">Избранное</a>
