--- a/src/pages/feed/components/header/header-feed.hbs
+++ b/src/pages/feed/components/header/header-feed.hbs
@@ -20,8 +20,8 @@
 
             <a href="#begin">Поиск</a>
             <a href="#begin">Пользователь</a>
+            <button class="btn-signIn" id="logout">Выйти</a>
 
         </div>
     </div>
 </div>
-
